--- a/css/creative.css
+++ b/css/creative.css
@@ -309,8 +309,8 @@ header.masthead p {
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  color: #fff;
-  background-color: #ee4b28 !important;
+  color: #000;
+  background-color: #ffffff !important;
 }
 
 .btn-primary:active, .btn-primary:focus {
